--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     
         <section id="projectPg" class="snap-section">
             
-            <h2>While Unfortunately I dont have any projects to mention</h2>
+            <h2>Hey guys some cool stuff is coming up , I am working on it as i am a passionate learner and working on project along learning about them</h2>
             <h3>I have an interest in the following fields in which I will be exploring more in the following years</h3>
             <div>
                 <span id="prgm">
