--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
             <h1>Hit me Up</h1>
             <p>💌 toayush0451@gmail.com</p>
             <p>📞 +91-</p>
-            <p>💾 https://github.com/AyushC0der  not my proudest nameing 😅</p>p
+            <a href="https://github.com/AyushC0der">💾GitHub </a><br>
+            <a href="https://www.linkedin.com/in/ayush-singh-35496630a/">🏢LinkedIn</a>
         </section>
 
     </div>
